<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".fragments.RegistrationFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_20"
        android:layout_marginEnd="@dimen/size_20"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/radius_size_30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inner_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/size_16"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register_here"
                android:textSize="@dimen/text_size_25"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20"
                app:errorEnabled="true"
                app:helperText="Required"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:layout_constraintTop_toBottomOf="@+id/register_text"
                app:startIconDrawable="@drawable/ic_email">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/size_12"
                    android:textSize="@dimen/text_size_20" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_5"
                app:errorEnabled="true"
                app:helperText="@string/required"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:layout_constraintTop_toBottomOf="@+id/email_layout"
                app:startIconDrawable="@drawable/ic_person">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/username_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/enter_full_name"
                    android:paddingStart="@dimen/size_12"
                    android:textSize="@dimen/text_size_20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_5"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:endIconMode="password_toggle"
                app:helperText="@string/required"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:layout_constraintTop_toBottomOf="@id/usernameLayout"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:paddingStart="@dimen/size_12"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/text_size_20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_picker_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/required"
                app:helperTextTextColor="@android:color/holo_red_dark"
                android:clickable="true"
                android:layout_marginTop="@dimen/size_5"
                app:layout_constraintTop_toBottomOf="@id/passwordLayout"
                app:startIconDrawable="@drawable/ic_calendar">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/date_picker_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:focusable="false"
                    android:hint="@string/select_your_dob"
                    android:paddingStart="@dimen/size_12"
                    android:textSize="@dimen/text_size_20" />

            </com.google.android.material.textfield.TextInputLayout>


            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/date_picker_layout">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:textSize="@dimen/text_size_18"/>

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:textSize="@dimen/text_size_18"/>

            </RadioGroup>

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/size_50"
                android:paddingRight="@dimen/size_50"
                android:text="@string/sign_up"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group" />

            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginaccount"
                app:layout_constraintTop_toBottomOf="@+id/register_button"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>