<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragmnets.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_20"
        android:layout_marginEnd="@dimen/size_20"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/radius_size_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/size_16"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/login"
                android:textSize="@dimen/text_size_25"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20"
                app:layout_constraintTop_toBottomOf="@+id/login_text"
                app:startIconDrawable="@drawable/ic_email">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/size_12"
                    android:textSize="@dimen/size_20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_12"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@id/email_layout"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:paddingStart="@dimen/size_12"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/text_size_20" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/size_50"
                android:paddingRight="@dimen/size_50"
                android:text="@string/login"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/size_12"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordLayout"/>

            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_account"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/size_12"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintTop_toBottomOf="@+id/login_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>